# OpenHMD

./: CMakeLists.txt  README.md  meson.build  meson_options.txt  output.txt
.github/: FUNDING.yml
examples/opengl/: main.c
examples/simple/: simple.c
examples/softposit/: softposit_test.cpp
gst/: gstohmdriftsensor.c  gstohmdriftsensor.h  meson.build  rift.c
include/: openhmd.h
src/: exponential-filter.c  exponential-filter.h  fusion.c  fusion.h  log.h  matrices.c  matrices.h  omath.c  omath.h  openhmd.c  openhmdi.h  platform-posix.c  platform-win32.c  platform.h  ukf.c  ukf.h  unscented.c  unscented.h
src/drv_htc_vive/: packet.c
src/drv_oculus_rift/: correspondence_search.c  correspondence_search.h  debug-common.h  debug_draw.c  debug_draw.h  kalman.cpp  kalman.h  led_search.c  led_search.h  ohmd-gstreamer.c  ohmd-gstreamer.h  ohmd-jpeg.c  ohmd-jpeg.h  ohmd-pipewire.c  ohmd-pipewire.h  ohmd-video.c  ohmd-video.h  packet.c  rift-debug-draw.c  rift-debug-draw.h  rift-hmd-radio.c  rift-hmd-radio.h  rift-kalman-6dof.c  rift-kalman-6dof.h  rift-sensor-ar0134.c  rift-sensor-ar0134.h  rift-sensor-blobwatch.c  rift-sensor-blobwatch.h  rift-sensor-common.h  rift-sensor-device.h  rift-sensor-esp570.c  rift-sensor-esp770u.c  rift-sensor-esp770u.h  rift-sensor-flicker.c  rift-sensor-flicker.h  rift-sensor-maths.c  rift-sensor-maths.h  rift-sensor-mt9v034.c  rift-sensor-opencv.cpp  rift-sensor-opencv.h  (+21 more)
src/drv_oculus_rift/lambdatwist/: cubic.h  eig3x3known0.h  lambdatwist_p3p.h  mat.h  quadratic.h  refine_lambda.h  vec.h
src/drv_oculus_rift/sensor/: ar0134.c  ar0134.h  esp570.c  esp770u.c  esp770u.h  uvc.c  uvc.h
src/drv_oculus_rift_s/: rift-s-controller.c  rift-s-controller.h  rift-s-firmware.c  rift-s-firmware.h  rift-s-hmd.h  rift-s-protocol.c  rift-s-protocol.h  rift-s-radio.c  rift-s.c  rift-s.h
src/drv_wmr/: wmr.c  wmr.h
tests/unittests/: main.c  mat4x4.c  pose.c  quat.c  tests.h  vec.c
