option(
	'examples',
	type: 'array',
	choices: [
		'simple',
		'opengl',
		'softposit_test',
		'',
	],
	value: [
		'simple',
		'opengl',
		'softposit_test',
	],
)

option(
	'drivers',
	type: 'array',
	choices: [
		'rift',
		'deepoon',
		'psvr',
		'vive',
		'nolo',
		'wmr',
		'xgvr',
		'vrtek',
		'external',
		'android',
	],
	value: [
		'rift',
		# 'deepoon',
		# 'psvr',
		# 'vive',
		# 'nolo',
		# 'wmr',
		# 'xgvr',
		# 'vrtek',
		# 'external',
	],
)

option(
	'hidapi',
	type: 'combo',
	choices: [
		'auto',
		'libusb',
		'hidraw'
	],
	value: 'auto',
)

option('debugging_mode', type : 'boolean', value : true,
       description: 'Enable developer HMD debugging mode')
